Fix page overflow from code blocks and on Chrome

--- a/src/app.css
+++ b/src/app.css
@@ -4,6 +4,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+	width: 100%;
+}
+
 @layer base {
 	.link {
 		@apply text-primary underline transition-colors duration-500;
